--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1><strong>The Biggest Startup Event of the Year</strong></h1>
-    <button>Find out more here <----</button>
+    <div class="container d-flex align-items-center h-100">
+      <div class="row">
+        <header class="text-center col-12">
+          <h1 class="text-uppercase">
+            <strong>The Biggest Startup Event of the Year</strong>
+          </h1>
+        </header>
+        <div class="buffer col-12"></div>
+        <section class="text-center col-12">
+          <hr />
+          <button class="btn btn-light btn-big text-uppercase">
+            Find Out More
+          </button>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
