--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr />
-          <button class="btn btn-light btn-big text-uppercase">
-            Find Out More
-          </button>
+          <a href="https://mailchi.mp/e6478cc59ac3/a-huge-startup"
+            ><button class="btn btn-light btn-big text-uppercase">
+              Find Out More
+            </button>
+          </a>
         </section>
       </div>
     </div>
